errorlog.txt
Main.java:1: error: class, interface, or enum expected
234
^
1 error
